<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="5dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/chronoButton"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:onClick="chronoRecord"
        android:text="@string/feelsbook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/loveButton"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/record_the_feeling_of_love"
        android:onClick="recordFeeling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronoButton"
        app:srcCompat="@android:color/holo_green_dark" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/record_the_feeling_of_joy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loveButton"
        app:srcCompat="@android:color/holo_purple" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/record_the_feeling_of_surprise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11"
        app:srcCompat="@android:color/holo_orange_light" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/record_the_feeling_of_anger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton12"
        app:srcCompat="@android:color/holo_red_dark" />

    <ImageButton
        android:id="@+id/imageButton14"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/record_the_feeling_of_sadness"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton13"
        app:srcCompat="@android:color/holo_blue_dark" />

    <ImageButton
        android:id="@+id/imageButton15"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/record_the_feeling_of_fear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton14"
        app:srcCompat="@android:color/black" />

    <Button
        android:id="@+id/emotionCountButton"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:onClick="emotionCount"
        android:text="@string/emotion_count"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton15" />

</android.support.constraint.ConstraintLayout>